--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libuuid-perl (0.05-1pexip1) pexip; urgency=low
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Sun, 11 May 2014 18:28:57 +0000
+
 libuuid-perl (0.05-1) unstable; urgency=low
 
   [ Ansgar Burchardt ]
